--- a/manuscript_Rmd/Acadian_seaplants_v1.tex
+++ b/manuscript_Rmd/Acadian_seaplants_v1.tex
@@ -167,7 +167,9 @@ for Biodiversity Science, Montreal, Quebec, Canada}
 
     \vskip 8.5pt % \small 
 
-\noindent Abstract to be written here
+\noindent Root and soil microbial and fungal activity were examined in two species
+(pepper and tomato) following treatment with Ascophyllum nodosum marine-
+plant extract. In addition, productivity was measured.
 
 
 \vskip 8.5pt \noindent \emph{Keywords}: Stella Marris, 16S, ITS, microbial diversity, Illumina MiSeq \par
@@ -186,20 +188,100 @@ for Biodiversity Science, Montreal, Quebec, Canada}
 
 \section{INTRODUCTION}\label{introduction}
 
-Liquid extracts of marine macroalga are used as biostimulants in
-agriculture. These extracts contain phytohormones that can influence
-physiological processes even at very low concentrations Craigie (2011).
-Stella Maris® is derived from fresh \emph{Ascophyllum nodosum} algae
-harvested from the nutrient-laden waters of the North Atlantic off the
-Eastern Coast of Canada.\\
+Seaweeds (also known as marine algae) have been used as a source of
+organic matter and nutrients for centuries, especially in coastal areas
+(Khan et al., 2009; Craigie, 2011). Originally, farmers would simply
+collect and dry algae before directly applying them to the field to
+decompose naturally prior to seeding in the spring. Liquid seaweed
+extracts, developped in the 1950s in order to concentrate plant
+growth-stimulating compounds, facilate their usage in modern
+agricultural crop production systems Milton (1952). Today, most
+commercially available seaweed extracts are made using a high
+temperature and pressure alcaline extraction technique from brown algae
+such as \emph{Ascophyllum nodosum}, \emph{Ecklonia maxima} or
+\emph{Laminaria spp}.\\
 \hspace*{0.333em}\\
-The aim of this project was to develop a better understanding of the
-effects of \emph{A. nodosum} extracts on plant growth. We tested the
-effect of these extract on two commonly used plants (Tomato -
+One of the main advantages of seaweed extracts is that they are
+biodegradable, non-toxic and come from a renewable resources, unlike
+modern chemical fertilizers Dhargalkar \& Pereira (2005). As such, they
+are commonly used as a natural fertilizer and source of phytohormones in
+organic and sustainable agricultural systems Craigie (2011). However,
+the specific molecular mechanisms underlying their mode-of-action and
+their effect on plant growth and productivity are complex and not well
+understood. In fact, scientific research into their mode-of-action on
+plant growth and their effect on root associated microbial and fungal
+communities is still in its infancy (Khan et al., 2009; Alam et al.,
+2013a). In turn, this likely precludes a greater acceptance of liquid
+seaweed extracts as a viable and renewable alternative to limit the use
+of modern fertilizers and pesticides in agriculture.\\
+\hspace*{0.333em}\\
+Studies on liquid seaweed extracts have been conducted to bettter
+understand how seaweed extracts might ultimately boost plant
+productivity (e.g.: Khan et al., 2009; Alam et al., 2013a,b; Wally et
+al., 2013; Arioli, Mattner \& Winberg, 2015) and a large number of
+phytohormones which can influence physiological processes even at very
+low concentrations, have been identified. Auxins, cytokinins, abscissic
+acid or gibberellins are all phytohormones present in seaweed extracts
+and which are hypothesized to trigger disease response pathways and
+increase stress tolerance in plants (Stirk \& Van Staden, 2014; Arioli,
+Mattner \& Winberg, 2015). Yet, Wally et al. (2013) concluded that
+phytohormone levels present within the extracts themselves were
+insufficient to cause significant effects in plants when applied at
+recommended rates. Instead, bioactive components within seaweed extracts
+themselves such as vitamins, oligosaccharides, and micronutrients may
+directly modulate the plant endogeneous biosynthesis pathways of
+phytohormones. Nevertheless, the basis for these benefits is complex and
+still relatively poorly understood (Stirk \& Van Staden, 2014; Arioli,
+Mattner \& Winberg, 2015).\\
+\hspace*{0.333em}\\
+Concurrently, it is hypothesized that the application of seaweed extract
+may also alter microbial and fungal communities. This is turn, could
+explain the improved plant performance often observed when seaweed
+extracts are applied to agricultural soil (Santoyo, Orozco-Mosqueda \&
+Govindappa, 2012; Alam et al., 2013a,b). For example, Alam et al.
+(2013a) demonstrated that the applicatio of \emph{Ascophyllum} extracts
+increased root associated microbial activity while promoting plant
+growth and root yield in carrots. Similarly, Alam et al. (2013b) showed
+that seaweed extracts increased strawberry root and shoot growth, berry
+yield and rhizosphere microbial diversity. While promising, these
+studies come with two major caveats. First, corellation does not imply
+causation, and the molecular mechanisms behind the observed seaweed
+extract - bacterial diversity - plant productivity relationship was not
+identified precisely. Second, these studies required culturing bacteria
+\emph{in vitro}, a labour intensive approach targetting a small (and
+biased) fraction of the total communities. Given the vast diversity of
+microbial populations, studies on the functional activity of complex
+soil microbial communities remain challenging.\\
+\hspace*{0.333em}\\
+The recent development of culture-independent molecular techniques
+should therefore permit to circumvent the inherent bias of culture based
+approaches by targeting the ubiquitous component of life, its DNA. In
+turn, this should permit to identify a larger proportion of the
+bacterial diversity and lead to a better understanding of the soil
+microbial response to seaweed extract. DNA barcoding targeting the
+internal transcribed spacer (ITS) region of the nuclear ribosomal repeat
+and the bacterial V3-V4 region of the 16S ribosomal gene for fungi and
+bacteria, respectively, are now regarded as a prerequisite procedure to
+comprehensively understand the diversity and ecology of microbial
+organisms (Toju et al., 2012; Klindworth et al., 2013). Once this is
+performed, further studies for example using inoculum of microbial
+species linked to the presence of liquid seaweed extract may help to
+identify a causative link between extracts, microbes and productivity.\\
+\hspace*{0.333em}\\
+The aim of the current project was to quantify the impact of seaweed
+(\emph{Ascophyllum nodosum}) extracts on plant growth. In addition, we
+tested how the bacterial and fungal communities responded to the
+addition of theses extracts. We hypothesized that the inclusion of
+liquid seaweed extracts would improve productivity and alter
+significantly the bacterial and fungal communities. We used a a
+commercially available extract (Stella Maris®) derived from fresh
+\emph{Ascophyllum nodosum} algae harvested from the nutrient-laden
+waters of the North Atlantic off the Eastern Coast of Canada. We tested
+the effect of these extract on two commonly used plants (Tomato -
 \emph{Solanum lycopersicum} and Pepper - \emph{Capsicum annuum}) using
-different measures of productivity. In addition, we tested how the
-bacterial and fungal communities responded to the addition of \emph{A.
-nodosum} extracts.\\
+different measures of productivity and by measuring soil and root
+bacterial anf fungal diversity using High Througput Illumina Miseq
+sequencing.\\
 \hspace*{0.333em} ~
 
 \section{MATERIAL AND METHOD}\label{material-and-method}
@@ -469,7 +551,7 @@ ground and below ground plant structure grew larger in fertilized
 plants, in addition to producing more fruits (see Figure 2 for some
 examples of the striking difference between fertilized and unfertilized
 plants). ~\\
-\includegraphics[width=5.20833in]{../figures/productivity/Figure_2_photos_productivity.png}\\
+\includegraphics[width=5.20833in]{../figures/Figure_2_photos_productivity.png}\\
 \textbf{Figure 2: Plant productivity. Photos were taken at the end of
 the experimental treatment. In each photo, fertilized plants are on the
 left. A: pepper plants, B: pepper roots, C: pepper fruits and D: tomato
@@ -486,7 +568,7 @@ only the pepper plants, the effect of fertilization on average fruit
 weight was significantly higher in the fertilized pepper plants
 (\(F_{(1,23)}\) = 10.84, \emph{p}-value=0.0032).\\
 \hspace*{0.333em}\\
-\includegraphics[width=6.25000in]{../figures/productivity/Figure_3_productivity.pdf}\\
+\includegraphics[width=6.25000in]{../figures/Figure_3_productivity.pdf}\\
 \textbf{Figure 3: measures of plant productivity.}\\
 \hspace*{0.333em}\\
 \hspace*{0.333em}\\
@@ -562,11 +644,11 @@ ribosomal gene.\\
 \hspace*{0.333em}\\
 \includegraphics[width=7.29167in]{../figures/Figure4_FAMILY_barplots_fungi.pdf}\\
 \textbf{Figure 4a: Barplots fo the relative abundance of fungal ASVs for
-}\\
+fungi}\\
 \hspace*{0.333em} ~\\
 \includegraphics[width=7.29167in]{../figures/Figure4_FAMILY_barplots_bacteria.pdf}\\
 \textbf{Figure 4b: Barplots fo the relative abundance of bacterial ASVs
-for }\\
+for bacteria}\\
 \hspace*{0.333em} ~\\
 \emph{Local (\(a\)-diversity)}\\
 The diversity of each site (\(a\)-diversity) was calculated seperately
@@ -717,7 +799,8 @@ and Figure 7.\\
 
 \section{ACKNOWLEDGMENTS}\label{acknowledgments}
 
-We thank Mengxuan Kong for technical work measuring productivity.
+We thank Mengxuan Kong for technical work measuring productivity. Simon
+Morvan for discussion about analyses + seaweed extracts.
 
 \newpage  
 
@@ -725,6 +808,18 @@ We thank Mengxuan Kong for technical work measuring productivity.
 \addcontentsline{toc}{section}{REFERENCES}
 
 \hypertarget{refs}{}
+\hypertarget{ref-alam2013ascophyllum}{}
+Alam MZ., Braun G., Norrie J., Hodges DM. 2013a. Ascophyllum extract
+application can promote plant growth and root yield in carrot associated
+with increased root-zone soil microbial activity. \emph{Canadian Journal
+of Plant Science} 94:337--348.
+
+\hypertarget{ref-alam2013effect}{}
+Alam MZ., Braun G., Norrie J., Hodges DM. 2013b. Effect of ascophyllum
+extract application on plant growth, fruit yield and soil microbial
+communities of strawberry. \emph{Canadian Journal of Plant Science}
+93:23--36.
+
 \hypertarget{ref-altschul1997gapped}{}
 Altschul SF., Madden TL., Schäffer AA., Zhang J., Zhang Z., Miller W.,
 Lipman DJ. 1997. Gapped blast and psi-blast: A new generation of protein
@@ -738,6 +833,11 @@ of variance. \emph{Austral ecology} 26:32--46.
 Anderson MJ., Legendre P. 1999. An empirical comparison of permutation
 methods for tests of partial regression coefficients in a linear model.
 \emph{Journal of statistical computation and simulation} 62:271--303.
+
+\hypertarget{ref-arioli2015applications}{}
+Arioli T., Mattner SW., Winberg PC. 2015. Applications of seaweed
+extracts in australian agriculture: Past, present and future.
+\emph{Journal of applied phycology} 27:2007--2015.
 
 \hypertarget{ref-silva}{}
 Callahan B. 2018. Silva for dada2: Silva taxonomic training data
@@ -764,6 +864,10 @@ Community U. 2018.UNITE general fasta release. version 01.12.2017.
 Craigie JS. 2011. Seaweed extract stimuli in plant science and
 agriculture. \emph{Journal of Applied Phycology} 23:371--393.
 
+\hypertarget{ref-dhargalkar2005seaweed}{}
+Dhargalkar V., Pereira N. 2005. Seaweed: Promising plant of the
+millennium.
+
 \hypertarget{ref-dumack2017rhogostomidae}{}
 Dumack K., Flues S., Hermanns K., Bonkowski M. 2017. Rhogostomidae
 (cercozoa) from soils, roots and plant leaves (arabidopsis thaliana):
@@ -774,11 +878,21 @@ Description of rhogostoma epiphylla sp. nov. and r. cylindrica sp. nov.
 Jukes T., Cantor C. 1969. Evolution of protein molecules, pp. 21--132 in
 mammalian protein metabolism, edited by munro hn.
 
+\hypertarget{ref-khan2009seaweed}{}
+Khan W., Rayirath UP., Subramanian S., Jithesh MN., Rayorath P., Hodges
+DM., Critchley AT., Craigie JS., Norrie J., Prithiviraj B. 2009. Seaweed
+extracts as biostimulants of plant growth and development. \emph{Journal
+of Plant Growth Regulation} 28:386--399.
+
 \hypertarget{ref-klindworth2013evaluation}{}
 Klindworth A., Pruesse E., Schweer T., Peplies J., Quast C., Horn M.,
 Glöckner FO. 2013. Evaluation of general 16S ribosomal rna gene pcr
 primers for classical and next-generation sequencing-based diversity
 studies. \emph{Nucleic acids research} 41:e1--e1.
+
+\hypertarget{ref-milton1952improvements}{}
+Milton R. 1952. Improvements in or relating to horticultural and
+agricultural fertilizers. \emph{British Patent} 664989.
 
 \hypertarget{ref-oksanen2013package}{}
 Oksanen J., Blanchet FG., Kindt R., Legendre P., Minchin PR., O'hara R.,
@@ -794,6 +908,12 @@ Pinheiro J., Bates D., DebRoy S., Sarkar D., Team RC. 2017. Nlme: Linear
 and nonlinear mixedeffects models. r package version 3.1-128. 2016.
 \emph{R software}.
 
+\hypertarget{ref-santoyo2012mechanisms}{}
+Santoyo G., Orozco-Mosqueda M del C., Govindappa M. 2012. Mechanisms of
+biocontrol and plant growth-promoting activity in soil bacterial species
+of bacillus and pseudomonas: A review. \emph{Biocontrol Science and
+Technology} 22:855--872.
+
 \hypertarget{ref-schliep2010phangorn}{}
 Schliep KP. 2010. Phangorn: Phylogenetic analysis in r.
 \emph{Bioinformatics} 27:592--593.
@@ -806,6 +926,11 @@ community-supported software for describing and comparing microbial
 communities. \emph{Applied and environmental microbiology}
 75:7537--7541.
 
+\hypertarget{ref-stirk2014plant}{}
+Stirk WA., Van Staden J. 2014. Plant growth regulators in seaweeds:
+Occurrence, regulation and functions. \emph{Advances in Botanical
+Research} 71:125--159.
+
 \hypertarget{ref-team2018r}{}
 Team RC., others. 2018. R: A language and environment for statistical
 computing.
@@ -814,6 +939,13 @@ computing.
 Toju H., Tanabe AS., Yamamoto S., Sato H. 2012. High-coverage its
 primers for the dna-based identification of ascomycetes and
 basidiomycetes in environmental samples. \emph{PloS one} 7:e40863.
+
+\hypertarget{ref-wally2013regulation}{}
+Wally OS., Critchley AT., Hiltz D., Craigie JS., Han X., Zaharia LI.,
+Abrams SR., Prithiviraj B. 2013. Regulation of phytohormone biosynthesis
+and accumulation in arabidopsis following treatment with commercial
+extract from the marine macroalga ascophyllum nodosum. \emph{Journal of
+plant growth regulation} 32:324--339.
 
 \hypertarget{ref-wang2007naive}{}
 Wang Q., Garrity GM., Tiedje JM., Cole JR. 2007. Naive bayesian
