updated analyses + MS

--- a/bibliography/reference.bib
+++ b/bibliography/reference.bib
@@ -1,3 +1,32 @@
+@article{reinhold2015roots,
+  title={Roots shaping their microbiome: global hotspots for microbial activity},
+  author={Reinhold-Hurek, Barbara and B{\"u}nger, Wiebke and Burbano, Claudia Sof{\'\i}a and Sabale, Mugdha and Hurek, Thomas},
+  journal={Annual review of phytopathology},
+  volume={53},
+  pages={403--424},
+  year={2015},
+  publisher={Annual Reviews}
+}
+@article{chaparro2014rhizosphere,
+  title={Rhizosphere microbiome assemblage is affected by plant development},
+  author={Chaparro, Jacqueline M and Badri, Dayakar V and Vivanco, Jorge M},
+  journal={The ISME journal},
+  volume={8},
+  number={4},
+  pages={790},
+  year={2014},
+  publisher={Nature Publishing Group}
+}
+@article{chung2007plant,
+  title={Plant species richness, elevated CO2, and atmospheric nitrogen deposition alter soil microbial community composition and function},
+  author={Chung, Haegeun and Zak, Donald R and Reich, Peter B and Ellsworth, David S},
+  journal={Global Change Biology},
+  volume={13},
+  number={5},
+  pages={980--989},
+  year={2007},
+  publisher={Wiley Online Library}
+}
 @book{margulis1991symbiosis,
   title={Symbiosis as a source of evolutionary innovation: speciation and morphogenesis},
   author={Margulis, Lynn and Fester, Ren{\'e}},
@@ -71,7 +100,7 @@
   year={2014},
   publisher={Am Soc Microbiol}
 }
-@misc{jukes1969evolution,
+@book{jukes1969evolution,
   title={Evolution of protein molecules, pp. 21--132 in Mammalian Protein Metabolism, edited by Munro HN},
   author={Jukes, TH and Cantor, CR},
   year={1969},
@@ -131,10 +160,11 @@
   publisher={Springer}
 }
 @article{wright2016using,
-  title={Using DECIPHER v2. 0 to analyze big biological sequence data in R.},
+  title={Using DECIPHER v2.0 to analyze big biological sequence data in R.},
   author={Wright, Erik S},
   journal={R Journal},
   volume={8},
+  pages={352-359},
   number={1},
   year={2016}
 }
@@ -165,17 +195,15 @@ url = {https://files.plutof.ut.ee/doi/C8/E4/C8E4A8E6A7C4C00EACE3499C51E550744A25
   publisher={Nature Publishing Group}
 }
 @article{pinheiro2017nlme,
-  title={Nlme: Linear and Nonlinear MixedEffects Models. R package version 3.1-128. 2016},
+  title={Nlme: Linear and Nonlinear MixedEffects Models. R package version 3.1-128},
   author={Pinheiro, J and Bates, D and DebRoy, S and Sarkar, D and Team, R Core},
   journal={R software},
   year={2017}
 }
 @article{oksanen2013package,
-  title={Package ‘vegan’},
+  title={vegan: Community Ecology Package. R package version 1.17.2},
   author={Oksanen, Jari and Blanchet, F Guillaume and Kindt, Roeland and Legendre, Pierre and Minchin, Peter R and O’hara, RB and Simpson, Gavin L and Solymos, Peter and Stevens, M Henry H and Wagner, Helene and others},
-  journal={Community ecology package, version},
-  volume={2},
-  number={9},
+  journal={R software},
   year={2013}
 }
 @article{anderson1999empirical,
@@ -200,7 +228,7 @@ url = {https://files.plutof.ut.ee/doi/C8/E4/C8E4A8E6A7C4C00EACE3499C51E550744A25
 }
 @article{team2018r,
   title={R: A language and environment for statistical computing},
-  author={Team, R Core},
+  author={R Core Team,},
   year={2018},
   publisher={Citeseer}
 }
@@ -348,7 +376,7 @@ url = {https://files.plutof.ut.ee/doi/C8/E4/C8E4A8E6A7C4C00EACE3499C51E550744A25
   publisher = {Elsevier {BV}},
   volume = {196},
   pages = {3--14},
-  author = {Patrick du Jardin},
+  author = {du Jardin, Patrick},
   title = {Plant biostimulants: Definition,  concept,  main categories and regulation},
   journal = {Scientia Horticulturae}
 }
@@ -497,7 +525,7 @@ url = {https://files.plutof.ut.ee/doi/C8/E4/C8E4A8E6A7C4C00EACE3499C51E550744A25
 @inproceedings{ayad1997effect,
   title={Effect of seaweed extract and the endophyte in tall fescue on superoxide dismutase, glutathione reductase and ascorbate peroxidase under varying levels of moisture stress},
   author={Ayad, JY and Mahan, JE and Allen, VG and Brown, CP},
-  booktitle={Proceedings},
+  booktitle={American Forage and Grassland Council Conference Proceedings},
   year={1997}
 }
 @article{battacharyya2015seaweed,
@@ -552,9 +580,11 @@ url = {https://files.plutof.ut.ee/doi/C8/E4/C8E4A8E6A7C4C00EACE3499C51E550744A25
 }
 @inproceedings{schmidt1997influence,
   title={Influence of seaweed on growth and stress tolerance of grasses},
+  publisher={Ft. Worth, TX},
   author={Schmidt, RE and Zhang, X},
-  booktitle={Proceedings},
-  year={1997}
+  booktitle={American Forage and Grassland Council Conference Proceedings},
+  year={1997},
+  pages={158–162}
 }
 @article{spann2011applications,
   title={Applications of a commercial extract of the brown seaweed Ascophyllum nodosum increases drought tolerance in container-grown ‘Hamlin’sweet orange nursery trees},
