removing cp and mt ASV from the bacteria

--- a/bibliography/reference.bib
+++ b/bibliography/reference.bib
@@ -1,3 +1,28 @@
+@article{bruulsema2012fertilizing,
+  title={Fertilizing crops to improve human health: a scientific review},
+  author={Bruulsema, Tom W and Heffer, Patrick and Welch, Ross and Cakmak, Ismail and Moran, Kevin and others},
+  journal={Better Crops},
+  volume={2},
+  pages={96},
+  year={2012}
+}
+@article{lay2018taxonomy,
+  title={Taxonomy and pathogenicity of Olpidium brassicae and its allied species},
+  author={Lay, Chih-Ying and Hamel, Chantal and St-Arnaud, Marc},
+  journal={Fungal biology},
+  year={2018},
+  publisher={Elsevier}
+}
+@article{li2018mortierella,
+  title={Mortierella elongata's roles in organic agriculture and crop growth promotion in a mineral soil},
+  author={Li, Fang and Chen, Lin and Redmile-Gordon, Marc and Zhang, Jiabao and Zhang, Congzhi and Ning, Qi and Li, Wei},
+  journal={Land Degradation \& Development},
+  volume={29},
+  number={6},
+  pages={1642--1651},
+  year={2018},
+  publisher={Wiley Online Library}
+}
 @article{reinhold2015roots,
   title={Roots shaping their microbiome: global hotspots for microbial activity},
   author={Reinhold-Hurek, Barbara and B{\"u}nger, Wiebke and Burbano, Claudia Sof{\'\i}a and Sabale, Mugdha and Hurek, Thomas},
